# megapixels

./: CMakeLists.txt  io_pipeline.c  meson.build
config/: pine64,pinephone-1.1.ini  pine64,pinephone-1.2.ini  pine64,pinephone-pro.ini  pine64,pinetab.ini
data/: camera.ui  org.postmarketos.Megapixels.desktop  org.postmarketos.Megapixels.gresource.xml
debian/: changelog  control  copyright  watch
debian/patches/: 0001-desktop-add-main-category-and-keywords.patch
src/: av_pipeline.c  av_pipeline.h  camera.c  camera.h  camera_config.c  camera_config.h  config.h  device.c  device.h  flash.h  io_pipeline.c  io_pipeline.cc  io_pipeline.h  main.c  main.h  panfrost_swizzle.c  panfrost_swizzle.h  pipeline.h  process_pipeline.c  process_pipeline.h  zbar_pipeline.c  zbar_pipeline.h
tools/: config_test.c
